objects/zkmulti__MCCheckpoint__c.object
<CustomObject>
    <fields>
        <fullName>zkmulti__Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Carrier_Date_Time__c</fullName>
        <formula>TEXT(zkmulti__Date_Time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Carrier Date Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Date_Time__c</fullName>
        <label>Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zkmulti__Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>zkmulti__LocationOnMap__c</fullName>
        <formula>IMAGE(&apos;https://maps.googleapis.com/maps/api/staticmap?key=AIzaSyCE2cR9HPgyprSO9rP6846gzDjs2UvY29A&amp;zoom=13&amp;size=300x200&amp;markers=color:green|label:S|&apos;+ TEXT(zkmulti__Geolocation__Latitude__s) + &apos;,&apos; + TEXT(zkmulti__Geolocation__Longitude__s), &apos;Location&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location on Map</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Shipment__c</fullName>
        <label>Shipment</label>
        <referenceTo>zkmulti__MCShipment__c</referenceTo>
        <relationshipName>Checkpoints</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zkmulti__Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Zip__c</fullName>
        <label>Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Checkpoint</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Checkpoint Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checkpoints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>